fix(application, UC05): return IntakeLogHeader from listLogs and persist new logs in createLog
listLogs previously returned full IntakeLog aggregates (entries included) just to discard entries in the DTO mapping, causing an N+1 load on every page fetch; IntakeLogHeader carries only id/profileId/logDate so entries are never touched.
createLog also built a new IntakeLog in memory without saving it, so a "no log for today" call never actually persisted a row.